--- a/Django/item_tracker/tracker/templates/history_list.html
+++ b/Django/item_tracker/tracker/templates/history_list.html
@@ -12,7 +12,7 @@
             グループ: {{ history.group.group_name }}
             管理項目: {{ history.asset.asset_name }}
             ユーザー: {{ history.user.username }}
-            画像: <img src="{{ history.image.url }}" alt="Image">
+            画像: <img src="{{ image.image.url }}" alt="Image">
             確認日時: {{ history.checked_at }}
             更新日時: {{ history.updated_at }}
         </li>
