--- a/Django/item_tracker/tracker/templates/image_add.html
+++ b/Django/item_tracker/tracker/templates/image_add.html
@@ -7,6 +7,12 @@
 
 {% block contents %}
 <div class="container my-5">
+    <div class="row justify-content-between my-4" id="checked" style="display: none;">
+        <!-- (x_min, y_min, x_max, y_max) = (<span id="box"></span>) -->
+        <h5 class="col-10" style="text-align: center; margin-top: 0.5rem;">全てのアイテムが入るように、外枠を囲ってください。</h5>
+        <button class="col-2 btn btn-primary my-auto" type="button" onclick="auto_fit();">画像読込</button>
+    </div>
+
     <div id="preview" style="position: relative; width: 100%; margin: auto;">
         <canvas id="canvas" style="display: none;"></canvas>
         <video id="movie" controls autoplay loop style="display: none;"></video>
@@ -15,17 +21,13 @@
         <!-- <span id="create" style="display: none;">{{ create }}</span> -->
     </div>
 
-    <div id="checked" style="display: none;">
-        (x_min, y_min, x_max, y_max) = (<span id="box"></span>)
-        <h4 class="my-3" style="text-align: center;">全てのアイテムが入るように、外枠を囲ってください。</h4>
-    </div>
 
-    <div class="row w-75 mx-auto" id="control" style="display: none;">
+    <div class="row w-50 mt-3 mb-5 mx-auto" id="control" style="display: none;">
         <input class="btn-check" type="checkbox" id="check" disabled>
-        <label class="btn btn-outline-primary" for="check" onclick="del_box();">リセット</label>
+        <label class="btn btn-outline-primary" for="check" onclick="del_box();">外枠をリセット</label>
     </div>
 
-    <hr>
+    <!-- <hr> -->
     
     <div class="row">
         <form method="POST" enctype='multipart/form-data'>
@@ -35,7 +37,7 @@
                 {{ item_add_form.as_table }}
                 {{ result_add_form.as_table }}
             </table>
-            <button class="btn btn-primary" type="submit" id="submit" disabled>{{ submit }}</button>
+            <button class="btn btn-primary w-100 mt-3" type="submit" id="submit" disabled>{{ submit }}</button>
         </form>
     </div>
     
@@ -60,7 +62,10 @@
     // const box_in = document.getElementsByName("box");
     const box = document.getElementById("box");
     // const finish = document.getElementById("finish");
+
     const submit = document.getElementById("submit");
+    submit.disabled = true;
+
     // const box_list = document.getElementById("box_list");
     // const create = document.getElementById("create").innerText;
     const image_get = document.getElementById("id_image");
@@ -145,7 +150,8 @@
             // canvas.height = preview.getBoundingClientRect().height * (movie.videoHeight/movie.videoWidth);
             // canvas.style = "width: 100%; height: auto;";
             canvas.style = "width: 100%; height: auto;";
-            checked.style = "margin: 0 16px;";
+            checked.style = "margin: 0;";
+            // checked.style = "";
             control.style = "";
             
             // captureFirstFrame(movie, canvas);
