--- a/Django/item_tracker/tracker/templates/history_detail.html
+++ b/Django/item_tracker/tracker/templates/history_detail.html
@@ -13,7 +13,7 @@
                 <strong>写真</strong>
             </div>
             <div class="col-9 col-lg-10">
-                <img id="image" src="{{ image.url }}" style="display: none;"/>
+                <img id="image" src="{{ history.image.url }}" style="display: none;"/>
             </div>
         </div>
         <div class="col" id="check_list" style="overflow-y: scroll;">
