--- a/Django/item_tracker/tracker/templates/history_list.html
+++ b/Django/item_tracker/tracker/templates/history_list.html
@@ -4,7 +4,7 @@
 
 {% block contents %}
 <section class="py-5">
-    <div class="text-center main">
+    <div class="text-center">
         <h2>履歴一覧</h2>
     </div>
     <form method="get">
