--- a/Django/item_tracker/tracker/templates/common_history_add.html
+++ b/Django/item_tracker/tracker/templates/common_history_add.html
@@ -14,15 +14,15 @@
         
 <div class="row justify-content-around w-100">
     <div class="col-12 col-xl-5 my-xl-2">
-        <input class="btn-check" type="checkbox" id="check_{{ forloop.counter0 }}" name="check">
-        <label class="btn btn-outline-primary w-100" for="check_{{ forloop.counter0 }}" onclick="del_box('{{ forloop.counter0 }}');">
+        <input class="btn-check" type="checkbox" id="check_{{ forloop.counter0 }}" name="check" disabled>
+        <label class="btn btn-outline-primary w-100" for="check_{{ forloop.counter0 }}" onclick="check_box('{{ forloop.counter0 }}');">
             <span name="checked">チェック</span>
         </label>
     </div>
 
     <div class="col-12 col-xl-5 my-2 my-xl-2">
         <input class="btn-check" type="checkbox" id="box_{{ forloop.counter0 }}" name="box" disabled>
-        <label class="btn btn-outline-primary w-100" for="box_{{ forloop.counter0 }}">座標獲得済み</label>
+        <label class="btn btn-outline-primary w-100" for="box_{{ forloop.counter0 }}" onclick="del_box('{{ forloop.counter0 }}');">座標取消</label>
     </div>
 </div>
 {% endfor %}
