履歴関連など

--- a/Django/item_tracker/tracker/templates/asset_create.html
+++ b/Django/item_tracker/tracker/templates/asset_create.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}日記作成 | Private Diary{% endblock %}
+{% block title %}管理項目作成 | toolkeeper{% endblock %}
 
 {% block active_diary_list %}active{% endblock %}
 
