--- a/Django/item_tracker/tracker/templates/asset_list.html
+++ b/Django/item_tracker/tracker/templates/asset_list.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}管理項目一覧 | ないもの検知{% endblock %}
+{% block title %}管理項目一覧 | toolkeeper{% endblock %}
 
 {% block active_asset_list %}active{% endblock %}
 
