--- a/Django/item_tracker/tracker/templates/index.html
+++ b/Django/item_tracker/tracker/templates/index.html
@@ -2,7 +2,7 @@
 
 {% load static %}
 
-{% block title %}日々の確認作業を簡単に | ないもの検知{% endblock %}
+{% block title %}日々の確認作業を簡単に | toolkeeper{% endblock %}
 
 {% block active_index %}active{% endblock %}
 
