--- a/Django/item_tracker/tracker/templates/asset_detail.html
+++ b/Django/item_tracker/tracker/templates/asset_detail.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}管理項目詳細 | ないもの検知{% endblock %}
+{% block title %}管理項目詳細 | toolkeeper{% endblock %}
 
 {% block active_asset_list %}active{% endblock %}
 
