--- a/Django/item_tracker/tracker/templates/history_add.html
+++ b/Django/item_tracker/tracker/templates/history_add.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}日記作成 | Private Diary{% endblock %}
+{% block title %}アイテムチェック | toolkeeper{% endblock %}
 
 {% block active_diary_list %}active{% endblock %}
 
