--- a/Django/item_tracker/tracker/templates/history_add.html
+++ b/Django/item_tracker/tracker/templates/history_add.html
@@ -7,9 +7,16 @@
 
 {% block contents %}
 <div class="container my-5">
-    <!-- <input class="btn-check" type="radio" id="test0" name="test"><label class="btn btn-outline-primary" for="test0">test0</label>
-    <input class="btn-check" type="radio" id="test1" name="test"><label class="btn btn-outline-primary" for="test1">test1</label> -->
-        
+
+    <div style="display: flex; width: 100%; justify-content: center;">
+        <div class="row justify-content-between align-items-center mb-3 mx-0" style="width: 80%;">
+            <h5 class="col col-lg-auto align-self-start" style="text-align: center; margin-top: 0.5rem;">全てのアイテムが入るように、外枠を囲ってください。</h5>
+            <button class="col-auto col-lg-2 align-self-end btn btn-primary my-auto" type="button" onclick="auto_fit(); draw_box()">画像読込</button>
+        </div>
+    </div>
+    
+    <hr>
+
     <div class="row">
         <div class="col-8" style="position: relative;">
             <div id="preview" style="width: 100%; height: auto;">
@@ -35,15 +42,23 @@
                 <span id="threshold_conf" style="display: none;">{{ threshold_conf }}</span>
             </div>
         </div>
-        <div class="col-4" id="check_list" style="overflow-y: scroll;">
-            {% include 'common_history_add.html' %}
-            
-            <!-- <div class="row my-5">ダミー</div> -->
+        <div class="col-4">
+            <div id="check_list" style="overflow-y: scroll; height: 100%;">
+                {% include 'common_history_add.html' %}
+            </div>
+            <div id="all_check">
+                <button class="btn btn-primary w-100 mt-4" type="button">一括チェック</button>
+            </div>
         </div>
     </div>
 
     <hr>
 
+    <div style="display: flex; width: 100%; justify-content: center;">
+        <label class="w-auto my-4" for="finish">
+            <input class="form-check-input" type="checkbox" id="finish" onclick="submit_check(finish.checked);"> すべてのアイテムをチェックしました。
+        </label>
+    </div>
     <!-- <div style="margin: 0 16px;">
         (x_min, y_min, x_max, y_max) = (<span id="box"></span>)
     </div>
@@ -52,12 +67,10 @@
 
 
     <!-- <hr> -->
-    <label class="my-3" for="finish">
-        <input class="form-check-input" type="checkbox" id="finish" onclick="submit_check(finish.checked);"> 終了する
-    </label>
+    
     <form method="POST" enctype='multipart/form-data'>
         {% csrf_token %}
-        <button class="btn btn-primary" type="submit" id="submit" disabled>終了する</button>
+        <button class="btn btn-primary w-100" type="submit" id="submit" disabled>終了する</button>
         <table class="table">
             {{ result_add_form.as_table }}
         </table>
@@ -95,6 +108,7 @@
     const threshold_conf = Number(document.getElementById("threshold_conf").innerText);
     
     const preview = document.getElementById("preview");
+    const all_check = document.getElementById("all_check");
 
     // 描画状態を管理するフラグと座標を初期化
     let isDrawing = false;
@@ -125,25 +139,29 @@
                 Number(document.getElementById(`item_${i+1}_y_max`).innerText) - box_y_min,
                 Number(document.getElementById(`item_${i+1}_conf`).innerText),
             ];
-            if (model_check == "False") {
-                box_li[i][4] = threshold_conf;
-                document.getElementById(`id_form-${i}-result_class`).value = 1;
-            } else document.getElementById(`id_form-${i}-result_class`).value = 2;
 
-            if (box_li[i][4] > threshold_conf) {
-                document.getElementById(`id_form-${i}-box_x_min`).value = box_li[i][0] + box_x_min;
-                document.getElementById(`id_form-${i}-box_y_min`).value = box_li[i][1] + box_y_min;
-                document.getElementById(`id_form-${i}-box_x_max`).value = box_li[i][2] + box_x_min;
-                document.getElementById(`id_form-${i}-box_y_max`).value = box_li[i][3] + box_y_min;
+            document.getElementById(`id_form-${i}-result_class`).value = 0;
+
+            if (model_check == "False") box_li[i][4] = threshold_conf;
+
+            if (box_li[i][4] >= threshold_conf) {
+                if (box_li[i][4] > threshold_conf) {
+                    // document.getElementById(`id_form-${i}-box_x_min`).value = box_li[i][0] + box_x_min;
+                    // document.getElementById(`id_form-${i}-box_y_min`).value = box_li[i][1] + box_y_min;
+                    // document.getElementById(`id_form-${i}-box_x_max`).value = box_li[i][2] + box_x_min;
+                    // document.getElementById(`id_form-${i}-box_y_max`).value = box_li[i][3] + box_y_min;
                 
-                if (create == 0) document.getElementById(`id_form-${i}-result_class`).value = 2;
+                    document.getElementById(`id_form-${i}-result_class`).value = 2;
+                } else {
+                    document.getElementById(`id_form-${i}-result_class`).value = 1;
+                }
 
                 // check[i].checked = true;
                 // checked[i].innerText = "チェック済み";
+                check[i].disabled = false;
+                box_in[i].disabled = false;
+                box_in[i].checked = true;
             }
-            check[i].disabled = false;
-            box_in[i].disabled = false;
-            box_in[i].checked = true;
             // console.log(document.getElementById(`item_${i+1}_x_min`).innerText);
         } else {
             box_li[i] = [0,0,0,0,0];
@@ -193,7 +211,7 @@
             x_min_fit = box_x_min * x_fit;
             y_min_fit = box_y_min * y_fit;
             
-            check_list.style = `overflow-y: scroll; height: ${canvas.height};`;
+            check_list.style = `overflow-y: scroll; height: ${canvas.height - all_check.getBoundingClientRect().height};`;
             ctx.drawImage(image, box_x_min, box_y_min, x_fix, y_fix, x_min_fit, y_min_fit, canvas.width, canvas.height,);
         }
 
@@ -209,7 +227,7 @@
     };
 
     // 選択済みのバウンディングボックスを描画
-    function draw_box(order) {
+    function draw_box(order=-1) {
 
         // キャンバスをクリアして画像を再描画
         ctx.clearRect(0, 0, canvas.width, canvas.height);
@@ -231,6 +249,7 @@
                     220,
                     50
                 )`;
+                if (order == -2) ctx.lineWidth = 2;
             }
 
             ctx.strokeRect(
@@ -243,7 +262,7 @@
     };
 
     // 画像の読み込みが完了したらキャンバスに描画
-    image.onload = () => {
+    function img_load(reload=false) {
 
         const x_fix = box_x_max - box_x_min;
         const y_fix = box_y_max - box_y_min;
@@ -257,7 +276,7 @@
         let x_min_fit = box_x_min * x_fit;
         let y_min_fit = box_y_min * y_fit;
 
-        check_list.style = `overflow-y: scroll; height: ${canvas.height};`;
+        check_list.style = `overflow-y: scroll; height: ${canvas.height - all_check.getBoundingClientRect().height};`;
 
         for (let i = 0; i < set.length; i++) {
             if (item_box >= 2 && document.getElementById(`item_${i+1}_x_min`).innerText != "None") {
@@ -269,8 +288,9 @@
                 box_li[i][3] *= y_fit;
             }
         }
-        draw_box(-1);
+        draw_box();
     };
+    image.onload = img_load();
 
 
     // マウスダウンイベントのリスナーを追加
@@ -291,7 +311,7 @@
         width = x - startX;
         height = y - startY;
 
-        draw_box(-1); // バウンディングボックスの描画
+        draw_box(); // バウンディングボックスの描画
 
         // 矩形を青い線で描画
         ctx.strokeStyle = "blue";
@@ -300,8 +320,13 @@
     });
 
     function submit_check(fin) {
-        if (fin) submit.disabled = false;
-        else submit.disabled = true;
+        if (fin) {
+            submit.disabled = false;
+            draw_box(order=-2);
+        } else {
+            submit.disabled = true;
+            draw_box();
+        }
     }
 
     function finish_check(index=-1) {
@@ -346,7 +371,7 @@
                 box_in[i].checked = true;
                 checked[i].innerText = "チェック済み";
 
-                draw_box(i);
+                draw_box(order=i);
             }
             console.log(box_li[i]);
         }
@@ -371,7 +396,7 @@
             if (i == order) set[i].checked = true;
             else set[i].checked = false;
         }
-        draw_box(order); // バウンディングボックスの描画
+        draw_box(order=order); // バウンディングボックスの描画
     };
 
 
@@ -383,10 +408,10 @@
             checked[i].innerText = "チェック";
             // box_in[i].checked = false;
             // if (create == 0) document.getElementById(`id_form-${i}-result_class`).value = 0;
-            // document.getElementById(`id_form-${i}-box_x_min`).value = null;
-            // document.getElementById(`id_form-${i}-box_y_min`).value = null;
-            // document.getElementById(`id_form-${i}-box_x_max`).value = null;
-            // document.getElementById(`id_form-${i}-box_y_max`).value = null;
+            document.getElementById(`id_form-${i}-box_x_min`).value = null;
+            document.getElementById(`id_form-${i}-box_y_min`).value = null;
+            document.getElementById(`id_form-${i}-box_x_max`).value = null;
+            document.getElementById(`id_form-${i}-box_y_max`).value = null;
             finish.checked = false;
             submit.disabled = true;
             // out_box(i);
@@ -421,6 +446,25 @@
             submit.disabled = true;
         }
         out_box(i);
+    };
+
+    all_check.onclick = () => {
+        for (let i = 0; i < set.length; i++) {
+            if (box_li[i][4] >= threshold_conf) {
+                auto_set_box(i);
+                check[i].checked = true;
+                checked[i].innerText = "チェック済み";
+            }
+        }
+        finish_check();
+    };
+
+    submit.onclick = () => {
+        for (let i = 0; i < set.length; i++) {
+            if (checked[i].innerText != "チェック済み") {
+                document.getElementById(`id_form-${i}-result_class`).value = 0;
+            }
+        }
     };
     
 </script>
