--- a/Django/item_tracker/tracker/templates/item_add.html
+++ b/Django/item_tracker/tracker/templates/item_add.html
@@ -49,10 +49,8 @@
         </div>
 
         <hr>
-
-        <div class="row w-75 m-auto mt-5">
-            <button class="btn btn-primary" type="submit">登録</button>
-        </div>
+        
+        <button class="btn btn-primary w-100 mt-3" type="submit">登録</button>
     </form>
 </div>
 {% endblock %}
